# chatacter_backend

./: .deepsource.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  app.py  compose.yaml  config.json  configuration.py  depshub.yaml  docker-bake.hcl  environment.yml  model.py  pixi.toml  pyproject.toml  renovate.json  req.json  requirements.txt  ruff.toml  settings.py  sonar-project.properties
App/: Dockerfile  app.py  pixi.toml  pyproject.toml  requirements.txt
App/chatacter/: crawler.py  model.py  scrapper.py  search.py  settings.py  vector_database.py
VideoGenerator/: Dockerfile  app.py  pyproject.toml  requirements.txt
VideoGenerator/chatacter/: app_sadtalker.py  inference.py  launcher.py  model.py  predict.py  quick_demo.ipynb  req.txt  requirements.txt  requirements3d.txt  settings.py
VideoGenerator/chatacter/GeneFacePlusPlus/data_gen/eg3d/: convert_to_eg3d_convention.py
VideoGenerator/chatacter/GeneFacePlusPlus/data_gen/runs/: binarizer_nerf.py
VideoGenerator/chatacter/GeneFacePlusPlus/data_gen/utils/: path_converter.py
VideoGenerator/chatacter/GeneFacePlusPlus/data_util/: face3d_helper.py
VideoGenerator/chatacter/GeneFacePlusPlus/deep_3drecon/: secc_renderer.py
VideoGenerator/chatacter/GeneFacePlusPlus/deep_3drecon/deep_3drecon_models/: bfm.py
VideoGenerator/chatacter/GeneFacePlusPlus/deep_3drecon/util/: mesh_renderer.py
VideoGenerator/chatacter/GeneFacePlusPlus/inference/: app_genefacepp.py  genefacepp_infer.py  infer_utils.py
VideoGenerator/chatacter/GeneFacePlusPlus/modules/audio2motion/: cnn_models.py  flow_base.py  multi_length_disc.py  transformer_base.py  transformer_models.py  utils.py  vae.py  vqvae.py
VideoGenerator/chatacter/GeneFacePlusPlus/modules/commons/: conv.py  gpt.py  layers.py  rel_transformer.py  rnn.py  rot_transformer.py  taming_tfm_modules.py  transformer.py  unet1d.py  vqvae.py  vqvae_cvq.py  vqvae_fsq.py  vqvae_lfq.py  vqvae_lfq_y.py  vqvae_taming.py  wavenet.py
VideoGenerator/chatacter/GeneFacePlusPlus/modules/postnet/: lle.py
VideoGenerator/chatacter/GeneFacePlusPlus/modules/radnerfs/: cond_encoder.py  radnerf.py  radnerf_sr.py  radnerf_torso.py  radnerf_torso_sr.py  renderer.py  utils.py
VideoGenerator/chatacter/GeneFacePlusPlus/tasks/: run.py
VideoGenerator/chatacter/GeneFacePlusPlus/tasks/radnerfs/: dataset_utils.py  losses.py  radnerf.py  radnerf_sr.py  radnerf_torso.py  radnerf_torso_sr.py
VideoGenerator/chatacter/GeneFacePlusPlus/utils/audio/: __init__.py  align.py  dct.py  io.py  (+3 more)
VideoGenerator/chatacter/sadtalker/: app_sadtalker.py  predict.py
VideoGenerator/chatacter/sadtalker/src/: generate_batch.py  test_audio2coeff.py
VideoGenerator/chatacter/scripts/: extension.py
VideoGenerator/chatacter/src/: generate_batch.py  generate_facerender_batch.py  gradio_demo.py  test_audio2coeff.py
VideoGenerator/chatacter/src/audio2exp_models/: audio2exp.py  networks.py
VideoGenerator/chatacter/src/audio2pose_models/: audio2pose.py  audio_encoder.py  cvae.py  discriminator.py  networks.py  res_unet.py
VideoGenerator/chatacter/src/face3d/: extract_kp_videos.py  extract_kp_videos_safe.py  visualize.py
VideoGenerator/chatacter/src/facerender/: animate.py
VideoGenerator/chatacter/src/utils/: audio.py  croper.py  face_enhancer.py  hparams.py  init_path.py  model2safetensor.py  paste_pic.py  preprocess.py  safetensor_helper.py  text2speech.py  videoio.py
(+311 files in other folders)
