[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mohamed Hisham Abdelzaher", email = "mohamed.hisham.abdelzaher@gmail.com" },
]
dependencies = [
    "addict==2.4.0",
    "altair==5.3.0",
    "annotated-types==0.6.0",
    "anyio==4.3.0",
    "attrs==23.2.0",
    "audioread==3.0.1",
    "av==12.0.0",
    "basicsr==1.4.2",
    "blinker==1.7.0",
    "cachetools==5.3.3",
    "cffi==1.16.0",
    "charset-normalizer==2.1.1",
    "click==8.1.7",
    "cog==0.9.6",
    "contourpy==1.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
