[project]
name = "app"
version = "0.1.0"
description = "Add a short description here"
requires-python = ">= 3.11"
dependencies = ["uv>=0.2.30,<0.3"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
app = { path = ".", editable = true }
