[project]
name = "App"
version = "0.1.0"
description = "App Part of Chatacter Backend"
requires-python = ">= 3.10"
dependencies = ["uv>=0.2.30,<0.3"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
App = { path = ".", editable = true }
