[project]
name = "video_generator"
version = "0.1.0"
description = "Video Generator part of the Chatacter Backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchvision>=0.19.1",
    # "av>=13.0.0",
    # "basicsr>=1.4.2",
    # "face-alignment>=1.4.1",
    # "fastapi[standard]>=0.112.2",
    # "gfpgan>=1.3.8",
    # "imageio-ffmpeg>=0.5.1",
    # "imageio>=2.35.1",
    # "kornia>=0.7.3",
    # "librosa>=0.10.2.post1",
    # "numpy==1.23.4",
    # "pydub>=0.25.1",
    # "soundfile>=0.12.1",
    # "transformers>=4.44.2",
    # "yacs>=0.1.8",
]
